fix:domain flickering

--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ body{
 #domainvideo {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 198%;
     left: 0;
     object-fit: cover;
     z-index: -1;
@@ -378,7 +378,7 @@ body{
   
 /* guidelines */
  .guidlinepage{
-    padding: 23px 0px 87px;  
+    padding: 58px 0px 87px;
     /* background-color:black; */
     /* background-image: url('img/home1.jpg'); */
     background-size: cover;
@@ -525,7 +525,7 @@ body{
      background-size: cover;
      background-position: center; */
      /* height: 100vh; */
-    padding: 0px 10px;
+    padding: 0px 10px 176px;
     height: 690px;
     
 }
